bundle/manifests/new-webhook-test.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  name: opendatahub-operator-mutating-webhook-configuration-new
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: opendatahub-operator-webhook-service-new
      namespace: opendatahub-operator-system
      path: /mutate-datasciencecluster
  failurePolicy: Fail
  name: datasciencecluster-defaulter.opendatahub.io-new
  rules:
  - apiGroups:
    - datasciencecluster.opendatahub.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - datascienceclusters
  sideEffects: None
  apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
    service.beta.openshift.io/serving-cert-secret-name: opendatahub-operator-controller-webhook-cert
  labels:
    app.kubernetes.io/created-by: opendatahub-operator
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: opendatahub-operator
  name: opendatahub-operator-webhook-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
    name: opendatahub-operator
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
    service.beta.openshift.io/serving-cert-secret-name: opendatahub-operator-controller-webhook-cert
  labels:
    app.kubernetes.io/created-by: opendatahub-operator
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: opendatahub-operator
  name: opendatahub-operator-webhook-service-new
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
    name: opendatahub-operator
