bundle/manifests/opendatahub-operator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
    service.beta.openshift.io/serving-cert-secret-name: opendatahub-operator-controller-webhook-cert
  labels:
    app.kubernetes.io/created-by: opendatahub-operator
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: opendatahub-operator
  name: opendatahub-operator-webhook-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
    name: opendatahub-operator
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  name: opendatahub-operator-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCg==
      name: opendatahub-operator-webhook-service
      namespace: opendatahub-operator-system
      path: /mutate-datasciencecluster
  failurePolicy: Fail
  name: datasciencecluster-defaulter.opendatahub.io
  rules:
  - apiGroups:
    - datasciencecluster.opendatahub.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - datascienceclusters
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  name: opendatahub-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCg==
      name: opendatahub-operator-webhook-service
      namespace: opendatahub-operator-system
      path: /validate-datasciencecluster
  failurePolicy: Fail
  name: datasciencecluster-validator.opendatahub.io
  rules:
  - apiGroups:
    - datasciencecluster.opendatahub.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - datascienceclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCg==
      name: opendatahub-operator-webhook-service
      namespace: opendatahub-operator-system
      path: /validate-dscinitialization
  failurePolicy: Fail
  name: dscinitialization-validator.opendatahub.io
  rules:
  - apiGroups:
    - dscinitialization.opendatahub.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - DELETE
    resources:
    - dscinitializations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCg==
      name: opendatahub-operator-webhook-service
      namespace: opendatahub-operator-system
      path: /validate-kueue
  failurePolicy: Fail
  name: kserve-kueuelabels-validator.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferenceservices
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCg==
      name: opendatahub-operator-webhook-service
      namespace: opendatahub-operator-system
      path: /validate-kueue
  failurePolicy: Fail
  name: kubeflow-kueuelabels-validator.opendatahub.io
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pytorchjobs
    - notebooks
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCg==
      name: opendatahub-operator-webhook-service
      namespace: opendatahub-operator-system
      path: /validate-kueue
  failurePolicy: Fail
  name: ray-kueuelabels-validator.opendatahub.io
  rules:
  - apiGroups:
    - ray.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - rayjobs
    - rayclusters
  sideEffects: None
